--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "format": "prettier-standard --format",
     "start": "nodemon server.js"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "author": "Maria Kourtesi",
   "license": "ISC",
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.2.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^27.0.6",
